--- a/sdk/tutorials/create-test.mdx
+++ b/sdk/tutorials/create-test.mdx
@@ -37,8 +37,17 @@ The Galtea SDK provides methods to create both [Quality Tests](/concepts/product
     ```
     
     <Warning>
-      The test file must follow the structure specified for [Quality Tests](/concepts/product/test/quality-tests#example-quality-tests-and-file-format) or [Red Teaming Tests](/concepts/product/test/red-teaming-tests#example-red-teaming-tests-and-file-format). If the file is not correctly formatted, test cases will not be created automatically, but you can still [add them manually](/sdk/api/test-case/create).
+      The test file must follow the structure specified for:
+      - [Quality Tests](/concepts/product/test/quality-tests#example-quality-tests-and-file-format): Standard format with `input`, `expected_output`, etc.
+      - [Red Teaming Tests](/concepts/product/test/red-teaming-tests#example-red-teaming-tests-and-file-format): Standard format with adversarial inputs
+      - [Scenarios Tests](/sdk/tutorials/simulating-conversations): Conversation simulator format with `goal`, `user_persona`, etc.
+      
+      If the file is not correctly formatted, test cases will not be created automatically, but you can still [add them manually](/sdk/api/test-case/create).
     </Warning>
+    
+    <Info>
+      **New Test Type**: Use `type="SCENARIOS"` to create conversation simulation tests that enable multi-turn dialogue evaluation with synthetic users. See the [Conversation Simulator Tutorial](/sdk/tutorials/simulating-conversations) for complete examples.
+    </Info>
   </Tab>
 
   <Tab title="Generate Test from Knowledge Base">
