--- a/concepts/product/test/red-teaming-threats.mdx
+++ b/concepts/product/test/red-teaming-threats.mdx
@@ -16,13 +16,6 @@ A **threat** in the context of AI and LLMs is any scenario, input, or technique 
 
 Below are the main threat types evaluated by Galtea, with references to industry standards:
 
-- **Jailbreak**: Bypassing the model’s safety mechanisms to generate harmful content.
-  - OWASP Top 10 for LLMs 2025: LLM01: Prompt Injection
-  - OWASP Top 10 for LLMs 2025: LLM06: Excessive Agency
-  - MITRE ATLAS: Prompt Injections
-  - MITRE ATLAS: Jailbreak
-  - NIST AI RMF: Information Security
-
 - **Data Leakage**: Unintentional exposure of sensitive data through model outputs.
   - OWASP Top 10 for LLMs 2025: LLM02: Sensitive Information Disclosure
   - MITRE ATLAS: Exfiltration via Inference API
@@ -46,6 +39,8 @@ Below are the main threat types evaluated by Galtea, with references to industry
   - MITRE ATLAS: Erode ML Model Integrity
   - NIST AI RMF: Harmful Bias or Homogenization
   - NIST AI RMF: Obscene, Degrading and/or Abusive Content
+
+- **Custom**: Generating a custom threat specific to your product based on your description. 
 
 ## Why Evaluate Against Threats?
 
