--- a/snippets/changelog/2025-07-04.mdx
+++ b/snippets/changelog/2025-07-04.mdx
@@ -12,7 +12,7 @@ We've expanded our arsenal of [Red Teaming Strategies](/concepts/product/test/re
 
 ## Introducing the Misuse Resilience Metric
 
-A new Red Teaming metric, **Misuse Resilience**, is now available. This [metric](/concepts/metric-type) evaluates your product's ability to refuse requests that are outside its intended scope, even if they aren't explicitly harmful. It helps ensure your AI stays on-task and doesn't get diverted into performing unintended or inappropriate actions, a key aspect of responsible AI development.
+A new [non-deterministic metric](/concepts/metric-type), **[Misuse Resilience](/concepts/metric-type/misuse-resilience)**, is now available. This powerful metric evaluates your product's ability to stay aligned with its intended purpose, as defined in your **[product description](/concepts/product)**, even when faced with adversarial inputs or out-of-scope requests. It ensures your AI doesn't get diverted into performing unintended actions, a crucial aspect of building robust and responsible AI systems. Learn more in the [full documentation](/concepts/metric-type/misuse-resilience).
 
 ## Enhanced Test Case Management: Mark as Reviewed
 
