--- a/concepts/product/test/red-teaming-strategies.mdx
+++ b/concepts/product/test/red-teaming-strategies.mdx
@@ -36,7 +36,7 @@ Below are the main red teaming strategies available in Galtea:
 - **Emoji Obfuscation**: Use emojis to replace or supplement words, making detection harder. *Obscures meaning for keyword-based systems.*
 - **Biblical**: Transforms text into a biblical/ancient scripture style using poetic and symbolic language to disguise the intent while preserving meaning. *May bypass filters looking for direct requests.*
 - **Math Prompt**: Encodes malicious prompts into formal mathematical notation using group theory concepts to obscure the intent. *Can hide intent from standard text analysis.*
-- **Roleplay**: Frame prompts as roleplay scenarios to encourage unintended model behavior by making the harmful request seem like part of a game or character's persona.
+- **Roleplay**: Attempts to alter the model's identity, encouraging it to ignore its safety mechanisms to perform actions it would otherwise refuse by making the harmful request seem like part of a game or character's persona.
 - **Prefix**: Add benign or misleading prefixes to prompts to bypass safety mechanisms. *Distracts or misleads content filters.*
 
 
