--- a/concepts/product/test/red-teaming-threats.mdx
+++ b/concepts/product/test/red-teaming-threats.mdx
@@ -40,7 +40,7 @@ Below are the main threat types evaluated by Galtea, with references to industry
   - NIST AI RMF: Harmful Bias or Homogenization
   - NIST AI RMF: Obscene, Degrading and/or Abusive Content
 
-- **Custom**: Generating a custom threat specific to your product based on your description. 
+- **Custom**: Allows the generation of highly specific adversarial tests that target the unique vulnerabilities and edge cases of your AI product. Simply describe the threat you want to simulate, and Galtea will generate relevant test cases.
 
 ## Why Evaluate Against Threats?
 
