move metric to red_teaming cluster

--- a/concepts/metric-type/misuse-resilience.mdx
+++ b/concepts/metric-type/misuse-resilience.mdx
@@ -34,7 +34,6 @@ In practice, the evaluation typically involves:
 
 ## Related Metrics
 
-- [Faithfulness](/concepts/metric-type/faithfulness)
 - [Non-Toxic](/concepts/metric-type/non-toxic)
 - [Unbiased](/concepts/metric-type/unbiased)
-- [Factual Accuracy](/concepts/metric-type/factual-accuracy)
+- [Jailbreak Resilience](/concepts/metric-type/jailbreak-resilience)
