--- a/sdk/tutorials/monitor-production-responses-to-user-queries.mdx
+++ b/sdk/tutorials/monitor-production-responses-to-user-queries.mdx
@@ -39,6 +39,10 @@ def handle_user_query(user_query, retrieval_context=None):
 
 For multi-turn conversations, use the session-based workflow to log the entire interaction first and then evaluate it.
 
+<Steps>
+<Step title="1. Create a Session">
+First, create a session at the start of the conversation. For production monitoring, make sure to set `is_production=True`.
+
 ```python
 from galtea import Galtea
 import os
@@ -47,39 +51,73 @@ galtea = Galtea(api_key=os.getenv("GALTEA_API_KEY"))
 VERSION_ID = "YOUR_ACTIVE_VERSION_ID"
 METRICS_TO_EVALUATE = ["conversation-relevancy", "knowledge-retention"]
 
-# 1. Create a session at the start of the conversation
 # Use is_production=True for real user interactions
 session = galtea.sessions.create(
     custom_id="CLIENT_PROVIDED_SESSION_ID",  # Optional: a custom ID to associate this session in Galtea Platform to the one in your real application.
     version_id=VERSION_ID,
     is_production=True
 )
+```
+</Step>
 
-# 2. Await for user interactions and save each turn or upload them as they happen
-# This would happen dynamically in your application, but for this example, we'll simulate a conversation
-conversation_turns = [
-    {"input": "What's the weather like in Paris?", "output": "It's sunny and 22°C in Paris."},
-    {"input": "Is it expected to rain later?", "output": "No, the forecast shows clear skies for the rest of the day."},
-    {"input": "Great, thanks!", "output": "You're welcome!"}
+<Step title="2. Log Conversation Turns">
+Next, log the user-assistant interactions. You can do this individually as each turn happens or in a single batch after the conversation ends.
+
+<Tabs>
+<Tab title="Log Turns Individually">
+This approach is useful for logging interactions in real-time in a live application.
+
+```python
+def get_model_response(user_input):
+    # Replace this with your actual model call
+    model_output = f"This is a simulated response to '{user_input}'"
+    return model_output
+
+# This would happen dynamically in your application.
+user_questions = [
+    "What's the weather like in Paris?",
+    "Is it expected to rain later?",
+    "Great, thanks!"
 ]
 
-# 3a. Log all turns as inference results
-# This could be done just after each response of the AI model instead of using a for loop
-for turn in conversation_turns:
-    # Log each turn as an inference result
-    galtea.inference_results.create(
+for question in user_questions:
+    model_response = get_model_response(question)
+    # Log the turn to Galtea right after it happens
+    inference_result = galtea.inference_results.create(
         session_id=session.id,
-        input=turn["input"],
-        output=turn["output"]
+        input=question,
+        output=model_response
     )
+```
 
-# 3b. If you have all turns ready, you can also create them in batch
-# galtea.inference_results.create_batch(
-#     session_id=session.id,
-#     conversation_turns=conversation_turns
-# )
+</Tab>
+<Tab title="Log Turns in a Batch">
+If you have the entire conversation history, you can log all turns at once for efficiency.
 
-# 4. Evaluate the entire session once the conversation has finished
+```python
+# The conversation must be in the standard format: a list of role/content dictionaries
+conversation_turns = [
+    {'role': 'user', 'content': "What's the weather like in Paris?"},
+    {'role': 'assistant', 'content': "It's sunny and 22°C in Paris."},
+    {'role': 'user', 'content': "Is it expected to rain later?"},
+    {'role': 'assistant', 'content': "No, the forecast shows clear skies for the rest of the day."},
+    {'role': 'user', 'content': "Great, thanks!"},
+    {'role': 'assistant', 'content': "You're welcome!"}
+]
+
+galtea.inference_results.create_batch(
+    session_id=session.id,
+    conversation_turns=conversation_turns
+)
+```
+</Tab>
+</Tabs>
+</Step>
+
+<Step title="3. Evaluate the Session">
+Finally, once the conversation is complete and all turns are logged, you can run an evaluation on the entire session.
+
+```python
 galtea.evaluation_tasks.create(
     session_id=session.id,
     metrics=METRICS_TO_EVALUATE
@@ -87,6 +125,9 @@ galtea.evaluation_tasks.create(
 
 print(f"Logged and evaluated production session {session.id}")
 ```
+
+</Step>
+</Steps>
 
 <Info>
 For more details on evaluating multi-turn conversations, see the [Evaluating Conversations](/sdk/tutorials/evaluating-conversations) guide.
