add new metric called Resilience To Noise

--- a/concepts/metric-type.mdx
+++ b/concepts/metric-type.mdx
@@ -54,6 +54,7 @@ At Galtea, we use two types of metrics to evaluate large language model (LLM) ou
 | Metric | Category | Description |
 | --- | --- | --- |
 | **[Factual Accuracy](/concepts/metric-type/factual-accuracy)** | RAG | Measures the quality of your RAG pipeline's generator by evaluating whether the actual_output factually aligns with the expected_output. |
+| **[Resilience To Noise](/concepts/metric-type/resilience-to-noise)** | RAG | Evaluates whether the generated output is resilient to noisy input, such as typos, OCR/ASR errors, and distracting content. |
 | **[Misuse Resilience](/concepts/metric-type/misuse-resilience)** | RAG | Evaluates whether the generated output is resilient to misuse and remains aligned with the product description. |
 | **[Answer Relevancy](/concepts/metric-type/answer-relevancy)** | RAG | Measures the quality of your RAG pipeline's generator by evaluating how relevant the actual_output of your LLM application is compared to the provided input. |
 | **[Faithfulness](/concepts/metric-type/faithfulness)** | RAG | Measures the quality of your RAG pipeline's generator by evaluating whether the actual_output factually aligns with the contents of your retrieval_context. |
