--- a/sdk/api/evaluation-task/create.mdx
+++ b/sdk/api/evaluation-task/create.mdx
@@ -15,8 +15,10 @@ session = galtea.sessions.create(version_id="YOUR_VERSION_ID")
 galtea.inference_results.create_batch(
     session_id=session.id,
     conversation_turns=[
-        {"input": "Hi", "output": "Hello!"},
-        {"input": "How are you?", "output": "I am fine, thank you."}
+        {"role": "user", "content": "Hi"},
+        {"role": "assistant", "content": "Hello!"},
+        {"role": "user", "content": "How are you?"},
+        {"role": "assistant", "content": "I am fine, thank you."}
     ]
 )
 
