scenarios tests -> scenario based tests for improved readability

--- a/concepts/product/test.mdx
+++ b/concepts/product/test.mdx
@@ -46,13 +46,13 @@ Galtea supports three main types of tests:
 
 <CardGroup cols={3}>
   <Card title="Quality Tests" icon="star" href="/concepts/product/test/quality-tests">
-    Tests that evaluate the quality and correctness of outputs
+    Tests that evaluate the quality and correctness of outputs.
   </Card>
   <Card title="Red Teaming Tests" icon="shield-halved" href="/concepts/product/test/red-teaming-tests">
     Tests that evaluate security, safety, and bias aspects, often by generating adversarial inputs based on defined threats and applying various strategies to make them more challenging.
   </Card>
-  <Card title="Scenarios Tests" icon="user-group" href="/concepts/product/test/scenarios-tests">
-    Tests that use conversation simulation to evaluate multi-turn dialogue interactions with synthetic users
+  <Card title="Scenario Based Tests" icon="user-group" href="/concepts/product/test/scenario-tests">
+    Tests that evaluate multi-turn dialogue capabilities of an agent, through the use scenarios which are based on user personas and specific goals.
   </Card>
 </CardGroup>
 
