Standardize apostrophe usage in documentation
Replaced curly apostrophes with straight apostrophes across metric concept files and changelog snippets for consistency and improved compatibility. No content or meaning was changed.

--- a/concepts/metric-type/answer-relevancy.mdx
+++ b/concepts/metric-type/answer-relevancy.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Answer Relevancy"
-description: "Evaluates whether the generated answer is relevant to the user’s input in a RAG pipeline."
+description: "Evaluates whether the generated answer is relevant to the user's input in a RAG pipeline."
 ---
 
 
-The **Answer Relevancy** metric is one of several [non-deterministic Metric Types](/concepts/metric-type) Galtea uses to evaluate the quality of your RAG pipeline’s generator by measuring how well the `actual_output` addresses the user's original query (`input`). It helps determine whether the model is generating responses that are focused, appropriate, and directly useful in the context of the question.
+The **Answer Relevancy** metric is one of several [non-deterministic Metric Types](/concepts/metric-type) Galtea uses to evaluate the quality of your RAG pipeline's generator by measuring how well the `actual_output` addresses the user's original query (`input`). It helps determine whether the model is generating responses that are focused, appropriate, and directly useful in the context of the question.
 
 This is essential for ensuring the model doesn't drift into unrelated topics or provide verbose but irrelevant information.
 
