--- a/concepts/metric-type/knowledge-retention.mdx
+++ b/concepts/metric-type/knowledge-retention.mdx
@@ -3,7 +3,7 @@ title: "Knowledge Retention"
 description: "Checks if your product can follow a multi-turn conversation without losing information."
 ---
 
-The **Knowledge Retention** metric is one of several [non-deterministic Metric Types](/concepts/metric-type) Galtea uses to evaluate your LLM-based chatbot’s ability to retain and consistently apply factual information shared earlier in a conversation. It analyzes the entire conversational history to determine whether the model recalls and reuses relevant facts when generating new responses.
+The **Knowledge Retention** metric is one of several [non-deterministic Metric Types](/concepts/metric-type) Galtea uses to evaluate your LLM-based chatbot's ability to retain and consistently apply factual information shared earlier in a conversation. It analyzes the entire conversational history to determine whether the model recalls and reuses relevant facts when generating new responses.
 
 This is particularly useful for long, multi-turn dialogues where context accumulation and memory play a crucial role in the user experience.
 
