--- a/snippets/changelog/2025-04-28.mdx
+++ b/snippets/changelog/2025-04-28.mdx
@@ -22,7 +22,7 @@ The new design not only raises the clarity and density of data presentation but 
 
 ## User Experience Enhancements
 
-We’re continuously refining the platform based on your feedback. This week’s improvements include:
+We're continuously refining the platform based on your feedback. This week's improvements include:
 
 - **Customizable Evaluation Tasks List:**  
   You can now select which metrics you are interested in, so the evaluation tasks list only shows the ones you need.
