--- a/snippets/changelog/2025-06-23.mdx
+++ b/snippets/changelog/2025-06-23.mdx
@@ -14,7 +14,7 @@ You can now create Quality Tests directly from your own examples using the new *
 - **Inabilities**: Known limitations.
 - **Security Boundaries**: Define the security scope and constraints.
 
-These additions help you document and communicate your product’s strengths and boundaries more clearly. [Read about product details](/concepts/product).
+These additions help you document and communicate your product's strengths and boundaries more clearly. [Read about product details](/concepts/product).
 
 ## Improved Q&A Generation
 Question-answer pairs are now generated with improved accuracy and clarity, thanks to better text filtering and processing.
@@ -25,5 +25,5 @@ Check it out [here](https://docs.galtea.ai/sdk/tutorials/create-product-descript
 
 ## General Improvements
 
-We’ve made various bug fixes and UX/UI improvements across the Dashboard, SDK, and more, making your experience smoother and more reliable.
+We've made various bug fixes and UX/UI improvements across the Dashboard, SDK, and more, making your experience smoother and more reliable.
 </Update>
