--- a/concepts/metric-type/contextual-precision.mdx
+++ b/concepts/metric-type/contextual-precision.mdx
@@ -3,7 +3,7 @@ title: "Contextual Precision"
 description: "Evaluates whether relevant documents in the retrieval context are ranked higher than irrelevant ones."
 ---
 
-The **Contextual Precision** metric is one of several [non-deterministic Metric Types](/concepts/metric-type) Galtea uses to assess how well your RAG pipeline’s retriever prioritizes relevant content. Specifically, it checks whether relevant items in the `retrieval_context` are ranked higher than irrelevant ones, based on their contribution to answering the user’s query.
+The **Contextual Precision** metric is one of several [non-deterministic Metric Types](/concepts/metric-type) Galtea uses to assess how well your RAG pipeline's retriever prioritizes relevant content. Specifically, it checks whether relevant items in the `retrieval_context` are ranked higher than irrelevant ones, based on their contribution to answering the user's query.
 
 High contextual precision means that the retriever is efficiently surfacing the most useful information near the top.
 
@@ -13,7 +13,7 @@ High contextual precision means that the retriever is efficiently surfacing the 
 
 To compute the `contextual_precision` metric, the following are required:
 
-- **`input`**: The user’s query.
+- **`input`**: The user's query.
 - **`retrieval_context`**: The list of retrieved documents or nodes, in ranked order.
 
 This setup allows for a rank-sensitive evaluation of retrieval effectiveness.
